# system-time-synchronizer

./: Cargo.toml
.cargo/: config.toml
.github/workflows/: build.yml
src/: main.rs
