[package]
name = "system-time-synchronizer"
version = "0.0.2"
edition = "2024"

[[bin]]
name = "system-time-synchronizer"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", default-features = false }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", features = ["time", "user"] }

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.60"
features = [
    "Win32_System_SystemInformation",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Pipes",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_FileSystem",
    "Win32_System_IO"
]

[profile.dev]
debug = "line-tables-only"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true
opt-level = 3
trim-paths = "all"
rustflags = ["-Cdebuginfo=0", "-Zthreads=8"]
